# nixbot

./: .bumpversion.cfg  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  manifest.yml  pyproject.toml  run.py  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.run/: nixbot.nixbot.run.xml  nixbot.run.xml
docs/: .gitignore  Makefile  conf.py  index.rst  make.bat
nixbot/: __init__.py  cli.py  nixbot.py
nixbot/bot/: __init__.py  bots.py  settings.py
nixbot/bot/chad/: __init__.py  chad.py  flowq.py  linkedin.py
nixbot/bot/x/: __init__.py  presence.py  x.py
nixbot/extensions/: bot.py  handler.py  plugin.py  settings.py  webhook.py  websocket.py
nixbot/model/: dctype.py  state.py  user.py
nixbot/utils/: health.py  websocket.py
tests/: __init__.py  test_nixbot.py
