[metadata]
name = nixbot
version = 0.1.0
description = bot framework with implementations for high availability, converstations with buttons, persistent storage and personalization
long_description = file: README.rst
author = Anton Wolkov
author_email = anton@kix.co.il
url = https://github.com/phntom/nixbot
license = MIT license
keywords = nixbot
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
test_suite = tests
setup_requires = pytest-runner

[flake8]
exclude = docs

[aliases]
test = pytest
